--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
+    "clsx": "^2.1.1",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-slick": "^0.30.3",
+    "sass": "^1.88.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
