--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.8.2",
+    "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
+    "pg": "^8.16.0",
+    "prisma": "^6.8.2",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
     "react-leaflet": "^5.0.0-rc.2",
@@ -23,6 +29,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
     "@types/leaflet": "^1.9.18",
     "@types/node": "^20",
     "@types/react": "^19",
