--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.8.2",
     "@tanstack/react-query": "^5.80.7",
+    "antd": "^5.26.2",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "jotai": "^2.12.5",
